fix colaboradores text align

--- a/static/src/less/custom.less
+++ b/static/src/less/custom.less
@@ -329,7 +329,7 @@ footer {
 	}
 }
 
-section.colaboradores {
+section.invitados {
   .container {
     .row {
       margin-bottom: 40px;
@@ -344,6 +344,22 @@ section.colaboradores {
     }
     p {
       text-align: justify;
+    }
+  }
+}
+
+section.colaboradores {
+  .container {
+    h2 {
+      margin-bottom: 20px;
+      margin-top: 0;
+    }
+    img {
+      .border-radius(50%);
+      margin-bottom: 10px;
+    }
+    p {
+      text-align: center;
     }
   }
 }
